--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "babel-runtime": "^6.0.0",
+    "echarts": "^4.0.4",
     "element-ui": "^2.0.9",
     "vue": "^2.5.2",
     "vue-resource": "^1.3.4",
